k8s/list/latoolb-us-production/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailman-postgres
  namespace: latoolb-us-production
  labels:
    app.kubernetes.io/name: mailman-postgres
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mailman-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
